2009-01-15  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/asp.lang:
	Updated. Thanks to Fabio Nagao.

2009-01-09  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/makefile.lang:
	Use proper strings for translation and add context.
	(Fixes bug #567247)

2009-01-09  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

        * gtksourceview/language-specs/asp.lang:
        * gtksourceview/language-specs/Makefile.am:
        * gtksourceview/language-specs/testfiles.sh:
        * po/POTFILES.in:
        Add ASP lang file by Fabio Nagao.

=== gtksourceview 2.5.2 ===

2009-01-05  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.2

2009-01-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gtksourceview/gtksourceview.c: verticall align category mark pixbuf 
	in the middle of the line (fixes #566408).

2008-12-31  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c
	(gtk_source_context_engine_text_inserted):
	The commit before the last one was broken, now bug #566131
	is really fixed.

2008-12-31  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/nsis.lang
	* gtksourceview/language-specs/t2t.lang
	* gtksourceview/language-specs/cmake.lang
	* gtksourceview/language-specs/Makefile.am:
	New lang files: CMake, NSIS, and txt2tags.
	* gtksourceview/language-specs/ini.lang: variable names may
	contain dash.
	* gtksourceview/language-specs/desktop.lang: added bunch of
	catefories from the f.d.o. spec.
	* gtksourceview/language-specs/kate.xml,
	* gtksourceview/language-specs/testfiles.sh: updated.

2008-12-31  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c
	(gtk_source_context_engine_text_inserted):
	Bug 566131 – Syntax highlightig bug; Backspace and Enter.

2008-12-28  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/pascal.lang: