@@ -1,3 +1,11 @@
+2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>
+
+	* gtksourceview/language-specs/dosbatch.lang:
+        * gtksourceview/language-specs/Makefile.am:
+        * gtksourceview/language-specs/testfiles.sh:
+        * po/POTFILES.in:
+	Add a very simle lang file for dos batch files.
+
 2009-01-15  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/language-specs/asp.lang:
